--- a/products.html
+++ b/products.html
@@ -269,7 +269,7 @@
                 </div>
             </div>
             <hr>
-            <p class="copyright">Copyright 2023 - Easy Tutorials</p>
+            <p class="copyright">Design by nhatlv.dev@gmail.com</p>
 
         </div>
     </div>
